--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -65,7 +65,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-md rounded-circle bg-light border mt-4" >
-                                    <a href="{% url "deleteFromCart" cart_product.id %}">
+                                    <a href="{% url "deleteFromCart" cart_product.product_id %}">
                                         <i class="fa fa-times text-danger"></i>
                                     </a>
                                 </button>
