coupon feature added, new models created, bugs fixed..

--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -78,9 +78,23 @@
             </table>
         </div>
         <div class="mt-5">
-            <input type="text" class="border-0 border-bottom rounded me-5 py-3 mb-4" placeholder="Coupon Code">
-            <button class="btn border-secondary rounded-pill px-4 py-3 text-primary" type="button">Apply Coupon</button>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text" class="border-0 border-bottom rounded me-5 py-3 mb-4" name="coupon_code" placeholder="Coupon Code">
+                <button class="btn border-secondary rounded-pill px-4 py-3 text-primary" type="submit">Apply Coupon</button>
+            </form>
         </div>
+
+        {% if coupon %}
+        <div class="mt-5">
+            <div class="alert aler-success">
+                {{ coupon.name }} - {{ coupon.discount }}
+                <a href="{% url "userCart" %}">Delete Coupon</a>
+            </div>
+
+        </div>
+        {% endif %}
+
         <div class="row g-4 justify-content-end">
             <div class="col-8"></div>
             <div class="col-sm-8 col-md-7 col-lg-6 col-xl-4">
@@ -95,7 +109,11 @@
                         <div class="d-flex justify-content-between">
                             <h5 class="mb-0 me-4">Coupon</h5>
                             <div class="">
-                                <p class="mb-0">İndirim miktarı...</p>
+                                {% if discount < 1 %}
+                                    <p class="mb-0">-%{{discount}}</p>
+                                {% else %}
+                                    <p class="mb-0">-{{discount}} TL</p>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -103,7 +121,9 @@
                         <h5 class="mb-0 ps-4 me-4">Total</h5>
                         <p class="mb-0 pe-4">{{totalPrice}}</p>
                     </div>
-                    <button class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4" type="button">Proceed Checkout</button>
+                    <button class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4" type="button">
+                        <a href="{% url "userCheckout" %}">Proceed Checkout</a> 
+                    </button>
                 </div>
             </div>
         </div>
