--- a/user/templates/useraccount.html
+++ b/user/templates/useraccount.html
@@ -13,46 +13,16 @@
     }
 </style>
 
- <!-- Fruits Shop Start-->
  <div class="container-fluid fruite py-5">
     <div class="container py-5">
-        <h1 class="mb-4">My Account</h1>
-        <div class="row g-4">
-            <div class="col-lg-12">
-                
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <div class="row g-4">
-                            <div class="col-lg-12">
-                                <div class="mb-3">
-                                    <h4>Categories</h4>
-                                    <ul class="list-unstyled fruite-categorie">
-                                        <li>
-                                            <div class="d-flex justify-content-between fruite-name">
-                                                <a href="">My Profile</a>
-                                            </div>
-                                            <div class="d-flex justify-content-between fruite-name">
-                                                <a href="">My Orders</a>
-                                            </div>
-                                            <div class="d-flex justify-content-between fruite-name">
-                                                <a href="{% url "userLogout" %}">Logout</a>
-                                            </div>
-                                        </li>
-                                        
-                                       
-                                    </ul>
-                                </div>
-                            </div>
-                          
-                            
-                            
-                        </div>
-                    </div>
-                    
+            <h1 class="mb-4">My Account</h1>
+            <div class="row g-4">
+                <div class="col-lg-12">    
+                    {% include "_useraccountnavbar.html" %}
+
                 </div>
+
             </div>
-        </div>
     </div>
 </div>
-<!-- Fruits Shop End-->
 {% endblock body %}
