--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -104,7 +104,7 @@
                         <div class="d-flex justify-content-between mb-4">
                             <h5 class="mb-0 me-4">Subtotal:</h5>
                             
-                            <p class="mb-0">{{totalPrice}}</p>
+                            <p class="mb-0">{{subtotal}}</p>
                         </div>
                         <div class="d-flex justify-content-between">
                             <h5 class="mb-0 me-4">Coupon</h5>
