--- a/user/templates/_useraccountnavbar.html
+++ b/user/templates/_useraccountnavbar.html
@@ -18,7 +18,13 @@
                                 <a href="{% url "changePassword" %}">Change Password</a>
                             </div>
                             <div class="d-flex justify-content-between fruite-name">
-                                <a href="">My Orders</a>
+                                <a href="{% url "userOrders" %}">My Orders</a>
+                            </div>
+                            <div class="d-flex justify-content-between fruite-name">
+                                <a href="{% url "userCoupons" %}">My Coupons</a>
+                            </div>
+                            <div class="d-flex justify-content-between fruite-name">
+                                <a href="{% url "userOrderProducts" %}">Order Products</a>
                             </div>
                             <div class="d-flex justify-content-between fruite-name">
                                 <a href="{% url "userLogout" %}">Logout</a>
