--- a/user/templates/userorders.html
+++ b/user/templates/userorders.html
@@ -16,7 +16,7 @@
 
  <div class="container-fluid fruite py-5">
     <div class="container py-5">
-            <h1 class="mb-4">My Profile</h1>
+            <h1 class="mb-4">My Orders</h1>
             <div class="row g-4">
             
                 <div class="col-lg-4">    
@@ -26,8 +26,70 @@
                 
                 <div class="col-lg-7">
                     <div class="row g-4">
+                        
+                        <h1>My Orders</h1>
                         <div class="col-lg-12">
-                            
+                            <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Order Code</th>
+                                    <th scope="col">First Name</th>
+                                    <th scope="col">Last Name</th>
+                                    <th scope="col">Phone</th>
+                                    <th scope="col">Adress</th>
+                                    <th scope="col">City</th>
+                                    <th scope="col">Country</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for orders in user_orders %}
+                                <tr>
+                                    <td>
+                                        {{orders.code}}
+                                    </td>
+                                    <td>
+                                        {{orders.first_name}}
+                                    </td>
+                                    <td>
+                                        {{orders.last_name}}
+                                    </td>
+                                    <td>
+                                        {{orders.phone}}
+                                    </td>
+                                    <td>
+                                        {{orders.adress}}
+                                    </td>
+                                    <td>
+                                        {{orders.city}}
+                                    </td>
+                                    <td>
+                                        {{orders.country}}
+                                    </td>
+                                    {% if orders.status == "New" %}
+                                        <td style="background-color: yellow;">
+                                            {{orders.status}}
+                                        </td>
+                                    {% elif orders.status == "Completed" or orders.status == "Accepted"%}
+                                        <td style="background-color: green; color:white;">
+                                            {{orders.status}}
+                                        </td>
+                                    {% endif %}
+                                    <td>
+                                        {{orders.total}}
+                                    </td>
+
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </div>
+                        
+                        <div class="col-lg-12">
+                            <table class="table">
+                                
+                                
+                            </table>
                         </div>
                     </div>
                 </div>
