--- a/user/templates/userprofile.html
+++ b/user/templates/userprofile.html
@@ -16,7 +16,7 @@
 
  <div class="container-fluid fruite py-5">
     <div class="container py-5">
-            <h1 class="mb-4">My Profile</h1>
+            <h1 class="mb-4">My Informations</h1>
             <div class="row g-4">
             
                 <div class="col-lg-4">    
