--- a/product/templates/detail.html
+++ b/product/templates/detail.html
@@ -72,7 +72,7 @@
                                 </button>
                             </div>
                         </div>
-                        <a href="#" class="btn border border-secondary rounded-pill px-4 py-2 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
+                        <a href="{% url "addToCart" product.id %}" class="btn border border-secondary rounded-pill px-4 py-2 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                     </div>
                     <div class="col-lg-12">
                         <nav>
@@ -91,42 +91,27 @@
                                 
                             </div>
                             <div class="tab-pane" id="nav-mission" role="tabpanel" aria-labelledby="nav-mission-tab">
+                                {% for comment in product_comments %}
                                 <div class="d-flex">
-                                    <img src="img/avatar.jpg" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="">
+                                    <img src="{{comment.user.userprofile.image.url}}" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="">
                                     <div class="">
-                                        <p class="mb-2" style="font-size: 14px;">April 12, 2024</p>
+                                        <p class="mb-2" style="font-size: 14px;">{{ comment.create_at }}</p>
                                         <div class="d-flex justify-content-between">
-                                            <h5>Jason Smith</h5>
+                                            <h5>{{ comment.user.username }}</h5>
+                                            
                                             <div class="d-flex mb-3">
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star"></i>
+                                                {% with ''|center:comment.rate as range %}
+                                                {% for _ in range %}
+                                                        <i class="fa fa-star text-secondary"></i>
+                                                {% endfor %}
+                                                {% endwith %}
                                             </div>
                                         </div>
-                                        <p>The generated Lorem Ipsum is therefore always free from repetition injected humour, or non-characteristic 
-                                            words etc. Susp endisse ultricies nisi vel quam suscipit </p>
+                                        <p>{{ comment.comment }}</p>
                                     </div>
                                 </div>
-                                <div class="d-flex">
-                                    <img src="img/avatar.jpg" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="">
-                                    <div class="">
-                                        <p class="mb-2" style="font-size: 14px;">April 12, 2024</p>
-                                        <div class="d-flex justify-content-between">
-                                            <h5>Sam Peters</h5>
-                                            <div class="d-flex mb-3">
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star text-secondary"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                            </div>
-                                        </div>
-                                        <p class="text-dark">The generated Lorem Ipsum is therefore always free from repetition injected humour, or non-characteristic 
-                                            words etc. Susp endisse ultricies nisi vel quam suscipit </p>
-                                    </div>
-                                </div>
+                                {% endfor %}
+                                
                             </div>
                             <div class="tab-pane" id="nav-vision" role="tabpanel">
                                 <p class="text-dark">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
@@ -136,22 +121,19 @@
                             </div>
                         </div>
                     </div>
-                    <form action="#">
+                    <form action="{% url "addComment" product.id %}" method="POST">
+                        {% csrf_token %}
                         <h4 class="mb-5 fw-bold">Leave a Reply</h4>
                         <div class="row g-4">
                             <div class="col-lg-6">
                                 <div class="border-bottom rounded">
-                                    <input type="text" class="form-control border-0 me-4" placeholder="Yur Name *">
+                                    <input type="text" class="form-control border-0 me-4" name="subject" placeholder="Subject">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
-                                <div class="border-bottom rounded">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email *">
-                                </div>
-                            </div>
+                           
                             <div class="col-lg-12">
                                 <div class="border-bottom rounded my-4">
-                                    <textarea name="" id="" class="form-control border-0" cols="30" rows="8" placeholder="Your Review *" spellcheck="false"></textarea>
+                                    <textarea name="comment" id="" class="form-control border-0" cols="30" rows="8" placeholder="Your Review *" spellcheck="false"></textarea>
                                 </div>
                             </div>
                             <div class="col-lg-12">
@@ -159,14 +141,23 @@
                                     <div class="d-flex align-items-center">
                                         <p class="mb-0 me-3">Please rate:</p>
                                         <div class="d-flex align-items-center" style="font-size: 12px;">
-                                            <i class="fa fa-star text-muted"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
+                                            <input type="radio" name="rate" value="1" id="1" class="fa fa-star text-muted">
+                                            <label for="1">1</label>
+                                            <input type="radio" name="rate" value="2" id="2" class="fa fa-star text-muted">
+                                            <label for="2">2</label>
+
+                                            <input type="radio" name="rate" value="3" id="3" class="fa fa-star text-muted">
+                                            <label for="3">3</label>
+
+                                            <input type="radio" name="rate" value="4" id="4" class="fa fa-star text-muted">
+                                            <label for="4">4</label>
+
+                                            <input type="radio" name="rate" value="5" id="5" class="fa fa-star text-muted">
+                                            <label for="5">5</label>
+                                            
                                         </div>
                                     </div>
-                                    <a href="#" class="btn border border-secondary text-primary rounded-pill px-4 py-3"> Post Comment</a>
+                                    <button class="btn border border-secondary text-primary rounded-pill px-4 py-3"> Post Comment</button>
                                 </div>
                             </div>
                         </div>
