--- a/user/templates/_useraccountnavbar.html
+++ b/user/templates/_useraccountnavbar.html
@@ -21,10 +21,13 @@
                                 <a href="{% url "userOrders" %}">My Orders</a>
                             </div>
                             <div class="d-flex justify-content-between fruite-name">
-                                <a href="{% url "userCoupons" %}">My Coupons</a>
+                                <a href="{% url "userOrderProducts" %}">Order Products</a>
                             </div>
                             <div class="d-flex justify-content-between fruite-name">
-                                <a href="{% url "userOrderProducts" %}">Order Products</a>
+                                <a href="{% url "userComments" %}">My Comments</a>
+                            </div>
+                            <div class="d-flex justify-content-between fruite-name">
+                                <a href="{% url "userCoupons" %}">My Coupons</a>
                             </div>
                             <div class="d-flex justify-content-between fruite-name">
                                 <a href="{% url "userLogout" %}">Logout</a>
